# Graphics-Fundamental

./: .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Graphics-Fundamental.sln  README.md
.cmake/api/v1/reply/: cache-v2-06654e20644406fa1cdc.json  cmakeFiles-v1-5c79fb11ad88d441f201.json  codemodel-v2-796902dedd21d1f948ed.json  directory-External.wglad-Debug-3bb838fe0c13d82c0f86.json  directory-src.01-Fundamental.01-GL-Window-Release-6ae2efff87ca398a888f.json  index-2024-04-09T06-02-46-0173.json  target-01-GL-Window-Debug-e1e47567596395c2dc36.json  target-01-GL-Window-MinSizeRel-b15ca4c6e8f95ed029b3.json  target-01-GL-Window-RelWithDebInfo-9ee604524d961a245a6e.json  target-01-GL-Window-Release-5cd450a29912ab7c6cc8.json  target-ALL_BUILD-Debug-94d21ea6283bf6d54b20.json  target-wglad-Debug-79dd17cfa7ad7d5e6dbd.json  target-wglad-MinSizeRel-345c5f5876f673a276a5.json  target-wglad-RelWithDebInfo-282c5aea190c44f37c05.json  target-wglad-Release-84c857d736eee8bec4e1.json
Internal/Graphics/: CMakeLists.txt  Config.h  Graphics.vcxproj  Graphics.vcxproj.filters  Timer.cpp  Timer.h  Window.cpp  Window.h
Internal/Graphics/Common/: Camera.h  Config.h  LinerMath.h  ObjLoader.cpp  ObjLoader.h  ObjParser.h
Internal/Graphics/GL/: GLConfig.h  GLShader.cpp  GLShader.h  GLWindow.cpp  GLWindow.h
Samples/01-Fundamental/01-GL-Window/: 01-GL-Window.cpp  CMakeLists.txt
Samples/01-Fundamental/02-GL-Buffer/: 02-GL-Buffer.cpp  CMakeLists.txt  basic.fs  basic.vs  basicPS.glsl  basicVS.glsl  noisePS.glsl  smokePS.glsl
Samples/Experimenal/01-FPSCounter/: 01-FPSCounter.cpp  CMakeLists.txt  modelPS.glsl  modelVS.glsl
data/: plane_max.mtl
internal/Graphics/: config.h
module/: external-config.cmake  stb-config.cmake  test.cmake  wglad-download.cmake
src/: main.cpp
src/01-Fundamental/01-GL-Window/: 01-GL-Window.cpp  01-GL-Window.vcxproj  01-GL-Window.vcxproj.filters  CMakeLists.txt
